--- a/src/template.html
+++ b/src/template.html
@@ -94,14 +94,14 @@
   <!-- /END About Section -->
 
   <!-- **** Projects Section **** -->
-  <section id="projects">
+  <!-- <section id="projects">
     <div class="container">
       <div class="project-wrapper">
         <h2 class="section-title dark-blue-text">
           Projects
         </h2>
 
-        <!-- Each .row is a project -->
+        <!-- Each .row is a project 
         <div class="row">
           <div class="col-lg-4 col-sm-12">
             <div class="project-wrapper__text">
@@ -163,7 +163,7 @@
               </a>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- /END Project -->
 <!-- 
         Each .row is a project
