--- a/src/template.html
+++ b/src/template.html
@@ -94,42 +94,12 @@
   <!-- /END About Section -->
 
   <!-- **** Projects Section **** -->
-  <!-- <section id="projects">
+  <section id="projects">
     <div class="container">
       <div class="project-wrapper">
         <h2 class="section-title dark-blue-text">
           Projects
         </h2>
-
-        <!-- Each .row is a project 
-        <div class="row">
-          <div class="col-lg-4 col-sm-12">
-            <div class="project-wrapper__text">
-              <h3 class="project-wrapper__text-title">Robofriends</h3>
-              <div>
-                <p class="mb-4">
-                  The first React.js App I try to build.
-                </p>
-              </div>
-              <a target="_blank" class="cta-btn cta-btn--hero" href="https://djhungtim.github.io/robo-friends/">
-                See Live
-              </a>
-              <a target="_blank" class="cta-btn text-color-main" href="https://github.com/djhungtim/robo-friends">
-                Source Code
-              </a>
-            </div>
-          </div>
-          <div class="col-lg-8 col-sm-12">
-            <div class="project-wrapper__image">
-              <a href="#!" target="_blank">
-                <div data-tilt class="thumbnail rounded">
-                  <img class="img-fluid" src="./assets/HatchfulExport-All/instagram_profile_image.png" />
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <!-- /END Project -->
 
         <!-- Each .row is a project -->
         <div class="row">
@@ -163,8 +133,43 @@
               </a>
             </div>
           </div>
-        </div> -->
+        </div>
         <!-- /END Project -->
+
+        <!-- Each .row is a project 
+        <div class="row">
+          <div class="col-lg-4 col-sm-12">
+            <div class="project-wrapper__text">
+              <h3 class="project-wrapper__text-title">Face recognition app</h3>
+              <div>
+                <p class="mb-4">
+                  This is the first big project I try to get it done.
+                  Use Clarifai API to detect face for users.
+                  The Front-end I use React.js, in the back-end I
+                  use Node.js + Express.js to build server. 
+                  And I use postgreSQL to set up my databse.
+                  Finally, all things deploy to Heroku.
+                </p>
+              </div>
+              <a target="_blank" class="cta-btn cta-btn--hero" href="https://smart-brain-666.herokuapp.com/">
+                See Live
+              </a>
+              <a target="_blank" class="cta-btn text-color-main" href="https://github.com/djhungtim/smart-brain">
+                Source Code
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-8 col-sm-12">
+            <div class="project-wrapper__image">
+              <a href="#!" target="_blank">
+                <div data-tilt class="thumbnail rounded">
+                  <img class="img-fluid" src="./assets/HatchfulExport/instagram_profile_image.png" />
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        /END Project -->
 <!-- 
         Each .row is a project
         <div class="row">
