--- a/src/template.html
+++ b/src/template.html
@@ -47,7 +47,7 @@
       <h1 class="hero-title" class="load-hidden">
         Hi, my name is <span class="text-color-main">Tim</span>
         <br />
-        I'm the One You need.
+        The Whole World Is A Playground
       </h1>
       <p class="hero-cta" class="load-hidden">
         <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
